--- a/src/pages/draft/[id]/index.astro
+++ b/src/pages/draft/[id]/index.astro
@@ -8,12 +8,14 @@ const { data, error } = await supabase
   .select("*")
   .eq("id", id)
   .single();
+const user = await supabase.auth.getUser();
+
 ---
 
 <Layout title={data?.title || "Draft"} desc="Draft details">
   <div class="max-w-screen-md mx-auto p-6 min-h-screen space-y-6">
-    <div class="w-full px-4 py-3 border-l-4 border-blue-600 bg-blue-50 rounded">
-      <h2 class="text-blue-800 font-medium">
+    <div class="w-full px-4 py-3 border-l-4 border-blue-600  rounded">
+      <h2 class="text-text-primary font-medium">
         Preview of your draft
       </h2>
       <p class=" text-text-secondary">You can share this with anyone</p>
@@ -47,10 +49,12 @@ const { data, error } = await supabase
         )}
 
         <div
-          class="prose prose-lg max-w-none prose-blue"
+          class="prose prose-p:text-text-primary prose-a:text-accent-hover prose-a:underline prose-strong:text-text-primary flex flex-col prose-lg max-w-none prose-blue"
           set:html={data.content_html}
         >
         </div>
+        {data.author === user.data.user?.id && (
+   
         <div class="flex justify-end gap-3 pt-6 border-t">
           <a
             href={`/manage?id=${id}`}
@@ -65,6 +69,7 @@ const { data, error } = await supabase
             Edit
           </a>
         </div>
+             )}
       </article>
     ) : (
       <p class="text-gray-500 italic">No draft found.</p>
