--- a/src/components/TopBar.astro
+++ b/src/components/TopBar.astro
@@ -47,7 +47,7 @@ const displayName = user?.user_metadata?.full_name || user?.email || 'Guest';
       </div>
       {user?.id ? (
       <>
-        <a href="/dashboard" class="flex items-center border border-text-primary/40 md:pl-2 p-1 rounded-full gap-2 cursor-pointer">
+        <a href="/a/dashboard" class="flex items-center border border-text-primary/40 md:pl-2 p-1 rounded-full gap-2 cursor-pointer">
          <span class="hidden md:inline font-semibold ">{displayName}</span>
           <img src={avatar} alt={displayName} class="rounded-full w-6 h-6"/>
          
