--- a/src/pages/draft/editor.astro
+++ b/src/pages/draft/editor.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import EditorPage from "../components/Editor.js";
 import { supabase } from "@/lib/supabase";
 import ThumbnailUploader from "@/components/ThumbnailUploader";
+import Layout from "@/layouts/Layout.astro";
+import EditorPage from "@/components/Editor";
 
 let id = Astro.url.searchParams.get("id");
 let tr = Astro.url.searchParams.get("tr");
