--- a/src/pages/draft/[id]/index.astro
+++ b/src/pages/draft/[id]/index.astro
@@ -55,7 +55,8 @@ const user = await supabase.auth.getUser();
         </div>
         {data.author === user.data.user?.id && (
    
-        <div class="flex justify-end gap-3 pt-6 border-t">
+        <div class="flex flex-wrap justify-end gap-3 pt-6 border-t">
+
           <a
             href={`/manage?id=${id}`}
             class="px-4 py-2 rounded-lg bg-accent-hover text-white transition"
