--- a/src/pages/draft/manage.astro
+++ b/src/pages/draft/manage.astro
@@ -179,7 +179,7 @@ const domain = Astro.url.origin;
       </div>
       {data[0].status === "draft" ?
             <p
-        class="border-left font-bold border-l-4 w-full p-2 mt-4 bg-blue-500/30 border-blue-500"
+        class="border-left font-bold border-l-4 w-full p-2 bg-blue-500/30 border-blue-500"
       >
         Publish Settings
       </p>
