--- a/src/pages/a/dashboard.astro
+++ b/src/pages/a/dashboard.astro
@@ -93,7 +93,7 @@ const emails: string[] = import.meta.env.EMAIL.split(",");
                   <div></div>
                 )
               }
-              <h3 class="text-lg font-semibold text-text-primary">{blog.title || "Untitled Draft"}</h3>
+              <h3 class="text-lg my-4 font-semibold text-text-primary">{blog.title || "Untitled Draft"}</h3>
               <p class="text-te text-text-secondary mt-1">{blog.desc || "No description"}</p>
               <div class="flex justify-between items-center mt-3">
                 <span class="text-xs text-gray-400">
