--- a/src/pages/a/dashboard.astro
+++ b/src/pages/a/dashboard.astro
@@ -33,7 +33,7 @@ const emails: string[] = import.meta.env.EMAIL.split(",");
 ---
 
 <Layout title="Dashboard" desc="Welcome to your dashboard">
-  <section class="max-w-screen-lg mx-auto px-4 py-8">
+  <section class="max-w-screen-lg mx-auto px-2 py-8">
     <div class="flex flex-col md:flex-row md:items-center md:justify-between gap-6">
       <div>
         <h1 class="text-3xl font-bold text-gray-900">Welcome back, {user.name} 👋</h1>
@@ -85,7 +85,7 @@ const emails: string[] = import.meta.env.EMAIL.split(",");
       {blogData && blogData.length > 0 ? (
         <div class="gap-2 grid-cols-1 grid  md:grid-cols-2">
           {blogData.map((blog) => (
-            <div class="bg-bg-secondary p-5 rounded-xl shadow hover:shadow-md transition">
+            <div class="bg-bg-secondary rounded-xl shadow hover:shadow-md transition">
               {
                 blog.thumb ? (   
               <img src={blog.thumb} alt="thumbnail" class="aspect-video rounded-2xl object-cover"/>
@@ -93,9 +93,9 @@ const emails: string[] = import.meta.env.EMAIL.split(",");
                   <div></div>
                 )
               }
-              <h3 class="text-lg my-4 font-semibold text-text-primary">{blog.title || "Untitled Draft"}</h3>
-              <p class="text-te text-text-secondary mt-1">{blog.desc || "No description"}</p>
-              <div class="flex justify-between items-center mt-3">
+              <h3 class="text-lg p-2 font-semibold text-text-primary">{blog.title || "Untitled Draft"}</h3>
+              <p class="p-2 text-sm text-text-secondary mt-1">{blog.desc || "No description"}</p>
+              <div class="flex p-4 justify-between items-center mt-3">
                 <span class="text-xs text-gray-400">
                   {new Date(blog.created_at).toLocaleDateString()}
                 </span>
