--- a/src/pages/a/dashboard.astro
+++ b/src/pages/a/dashboard.astro
@@ -49,7 +49,7 @@ const emails: string[] = import.meta.env.EMAIL.split(",");
 
 { emails.includes(user.email || '') && (
   <div class="grid grid-cols-2 lg:grid-cols-4 gap-4 mt-8">
-    <a href="/messages" class="bg-bg-secondary p-5 rounded-xl outline outline-accent-hover  shadow-md hover:shadow-xl transition text-center">
+    <a href="/a/messages" class="bg-bg-secondary p-5 rounded-xl outline outline-accent-hover  shadow-md hover:shadow-xl transition text-center">
       <p class=" text-xl font-semibold text-text-primary">Messages</p>
       <p class="text-sm text-text-secondary mt-1">View messages </p>
     </a>
